@@ -50,6 +50,13 @@
 #b 127.0.0.1
 #bind_address 127.0.0.1
 
+# C|connection_logging:
+# Log interaction between clients and perdition. This does
+# not include interactions between clients and back-end servers.
+# Note: d|debug must be specified for this option to take effect.
+#C
+#connection_logging
+
 # c|client_server_specification:
 # Allow USER of the form
 # user<delimiter>server[:port] to
@@ -65,7 +72,7 @@
 #D @
 #domain_delimiter \#
 
-# -d|--debug:
+# d|debug:
 # Turn on verbose debuging to syslog.
 #d
 #debug
@@ -78,7 +85,7 @@
 #i
 #inetd_mode
 
-# -L|--connection_limit:
+# L|connection_limit:
 # Maximum number of connections to accept
 # simultaneously. A value of zero sets
 # no limit on the number of simultaneous
@@ -92,7 +99,7 @@
 #l 110
 #listen_port 110
 
-# -M|--map_library:
+# M|map_library:
 # Library to open that provides functions to look
 # up the server for a user. A null library mean
 # no library will be accessed and hence, no lookup
@@ -103,10 +110,10 @@
 # map_library /usr/lib/libperditiondb_mysql.so
 # # map_library ""
 
-# -m|--map_library_opt:
+# m|map_library_opt:
 # String option to pass to databse access function
 # provided by the library specified by the
-# -M|--map_library option. The treatment of this
+# M|map_library option. The treatment of this
 # string is up to the library, in the case of
 # perditiondb_gdbm the gdbm map to access is set.
 #m /etc/perdition/popmap.db
@@ -114,7 +121,7 @@
 #map_library_opt /etc/perdition/popmap.re
 #map_library_opt ""
 
-# -o|--server_ok_line:
+# o|server_ok_line:
 # If authentication with the back-end server is
 # successful then send the servers +OK line to
 # the client, instead of generting one
