@@ -19,6 +19,8 @@ xxx
      Geoff Mitchell <g.mitchell@videonetworks.com>
    - Running perdition.pop3 and perdition.imap4 now automatically
      runs perdition in POP3 or IMAP4 mode respectively
+   - Added connection loging to interaction between perdition
+     and clients may be logged for debugging purposes
 
 ----------------------------------------------------------------------
 
